Fix device icons on Safari

--- a/front/src/less/index.less
+++ b/front/src/less/index.less
@@ -60,7 +60,8 @@
         font-size: 0.8em;
 
         > svg {
-            margin: 0.6em 0 0.3em;
+            display: block;
+            margin: 0.6em auto 0.3em;
             fill: #fff;
         }
 
